src/src/objects/User_Story__c.object
<CustomObject>
    <description>User stories are simple descriptions of a feature told from the user&apos;s point of view</description>
    <fields>
        <fullName>Acceptance_Criteria__c</fullName>
        <label>Acceptance Criteria</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>As_a__c</fullName>
        <label>As a</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_BA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned BA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Stories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Date__c</fullName>
        <description>Which date the record will be assigned.</description>
        <label>Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assigned_Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Developer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_QA_Date__c</fullName>
        <label>Assigned QA Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assigned_QA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned QA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Stories2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Objective__c</fullName>
        <label>Business Objective</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>the date on which something falls due, especially the payment of a bill.</description>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <label>Estimated Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>I_want_to__c</fullName>
        <label>I want to</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <label>Sprint</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Analysis</fullName>
                    <default>true</default>
                    <label>In Analysis</label>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>In Development</fullName>
                </value>
                <value>
                    <fullName>Ready For SAT</fullName>
                </value>
                <value>
                    <fullName>In SAT(QA)</fullName>
                </value>
                <value>
                    <fullName>Testing Done</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Story_Points__c</fullName>
        <label>Story Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub-Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Doing</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wire_Frames__c</fullName>
        <label>Wire Frames</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>User Story</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Assigned_Developer__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Assigned_User_Stories</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Assigned_Developer__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Assigned_Developer__c</field>
            <operation>equals</operation>
            <value>PAVAN</value>
        </filters>
        <label>Assigned User Stories</label>
    </listViews>
    <nameField>
        <displayFormat>US-{0000}</displayFormat>
        <label>User Story Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>